# test-server

./: .gitignore  CONTRIBUTING.md
.github/workflows/: release-python-sdk.yml
internal/record/: recording_https_proxy.go
scripts/update-sdk-checksums/: main.go
sdks/dotnet/: BinaryInstaller.cs  TestServerSdk.cs  TestServerSdk.csproj
sdks/dotnet/tools/installer/: Program.cs
sdks/python/: MANIFEST.in  README.md  install.py  pyproject.toml
sdks/python/sample/: README.md  conftest.py  test_sample.py
sdks/python/sample/test-data/config/: test-server-config.yml
sdks/python/sample/test-data/recordings/: python-sample-test-single-name.json
sdks/python/sample/test-data/recordings/models/folder1/folder2/: python-sample-test_recursive_path.json
sdks/python/src/test_server_sdk/: install.py  test_server_wrapper.py
sdks/typescript/: checksums.json  postinstall.js
